Fixes #1268: VAL - Uploaded file name is not fit into the 'MS Excel File To Upload' box in 'Create a New Case Report Form (CRF)' page. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1429 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2334,6 +2334,10 @@ a.dnShortcut:hover {
     margin-left: 0px !important;
 }
 
+.visible {
+    display: block !important;
+}
+
 .hidden {
     display: none !important;
 }
@@ -2565,4 +2569,27 @@ a.dnShortcut:hover {
 
 .scheduleLink {
     display: block;
+}
+
+.fileInputDivWrapper {
+    margin-right: 30px;
+    overflow: hidden;
+    padding: 7px 16px 12px 11px;
+}
+
+.fileInputTableWrapper {
+    padding: 10px;
+}
+
+.excelFileUploadWrapper {
+    width: 120px;
+}
+
+.fileNameTail {
+    float: right;
+    left: -15px;
+    position: relative;
+    top: -40px;
+    width: 14px;
+    z-index: 99999;
 }
